# youtube-downloader

./: .gitignore  README.md  TODO.md  build.bat  main.py  project-requirements.md  pyproject.toml
.github/: funding.yml
app/: __init__.py  main.py
app/config/: logging_config.py
app/core/: __init__.py  models.py  settings.py
app/services/: __init__.py  download_manager.py  download_service.py  yt_services.py
app/ui/: __init__.py
app/ui/tabs/: __init__.py  channel_tab.py  download_manager_tab.py  multi_video_tab.py  playlist_tab.py  settings_tab.py  single_video_tab.py
app/validator/: __init__.py  youtube_validator.py
cli/: .gitignore  README.md  main.py  requirements.txt
cli/validator/: youtube_validator.py
services/: playlist_downloader.py
